--- a/index.html
+++ b/index.html
@@ -51,6 +51,23 @@
             border-color: #1d3557;
             box-shadow: 0 0 12px rgba(29, 53, 87, 0.5);
         }
+        input[type="password"] {
+    width: calc(100% - 24px);
+    padding: 14px;
+    margin-top: 15px;
+    border: 2px solid #457b9d;
+    border-radius: 8px;
+    font-size: 16px;
+    text-align: center;
+    background: #f7f9fb;
+    transition: border-color 0.3s, box-shadow 0.3s;
+    font-family: 'Rubik', sans-serif;
+}
+input[type="password"]:focus {
+    outline: none;
+    border-color: #1d3557;
+    box-shadow: 0 0 12px rgba(29, 53, 87, 0.5);
+}
         button {
             width: 100%;
             padding: 14px;
@@ -617,15 +634,17 @@
         </div>
     </div>
 
-    <div id="login-overlay" class="popup-overlay" onclick="closeLoginPopup()"></div>
-    <div id="login-popup" class="popup">
-        <h3>התחבר למצב Ultimate</h3>
-        <input type="text" id="usernameInput" placeholder="הזן שם משתמש" style="color: #1d3557;">
-        <div class="popup-buttons">
-            <button onclick="login()">התחבר</button>
-            <button onclick="closeLoginPopup()">סגור</button>
-        </div>
+   <div id="login-overlay" class="popup-overlay" onclick="closeLoginPopup()"></div>
+<div id="login-popup" class="popup">
+    <h3 id="login-title">התחבר או הירשם</h3>
+    <input type="text" id="usernameInput" placeholder="הזן שם משתמש" style="color: #1d3557;">
+    <input type="password" id="passwordInput" placeholder="הזן סיסמה" style="color: #1d3557; margin-top: 10px;">
+    <div class="popup-buttons">
+        <button onclick="login()">התחבר</button>
+        <button onclick="register()">הירשם</button>
+        <button onclick="closeLoginPopup()">סגור</button>
     </div>
+</div>
 
     <div id="team-overlay" class="popup-overlay" onclick="closeTeamPopup()"></div>
     <div id="team-popup" class="popup" style="max-width: 600px;">
@@ -677,9 +696,15 @@ document.addEventListener("DOMContentLoaded", () => {
     btn.style.opacity = "1"; // הכפתור תמיד גלוי
     btn.classList.toggle("active", ultimateMode); // עדכון ויזואלי לפי המצב
 });
+function getUsers() {
+    return JSON.parse(localStorage.getItem("users")) || {};
+}
 
+function saveUsers(users) {
+    localStorage.setItem("users", JSON.stringify(users));
+}
       function toggleUltimateMode() {
-    const username = localStorage.getItem("username");
+    const username = localStorage.getItem("currentUser");
     const btn = document.getElementById("dramaticModeBtn");
 
     if (!username) {
@@ -688,19 +713,19 @@ document.addEventListener("DOMContentLoaded", () => {
     }
 
     ultimateMode = !ultimateMode;
-    localStorage.setItem("ultimateMode", ultimateMode); // שמירה ב-localStorage
-    btn.classList.toggle("active", ultimateMode); // עדכון ויזואלי
+    localStorage.setItem("ultimateMode", ultimateMode);
+    btn.classList.toggle("active", ultimateMode);
 
     if (ultimateMode) {
         alert("מצב Ultimate הופעל!");
-        openUltimateMenu(); // פתיחת התפריט מיד עם ההפעלה
+        openUltimateMenu();
     } else {
         alert("מצב Ultimate כובה.");
-        closeUltimateMenu(); // סגירת התפריט אם פתוח
+        closeUltimateMenu();
     }
 
     if (document.getElementById("result").style.display === "block") {
-        lookupModel(); // עדכון התוצאה אם מוצגת
+        lookupModel();
     }
 }
 
@@ -1075,7 +1100,7 @@ document.addEventListener("DOMContentLoaded", () => {
         }
 
         function getDramaticModelDetails(model) {
-            const username = localStorage.getItem("username");
+            const username = localStorage.getItem("currentUser");
             let teamData = initTeamData();
 
             if (teamData && teamData.searchesLeft <= 0) {
@@ -1300,44 +1325,70 @@ document.addEventListener("DOMContentLoaded", () => {
             document.getElementById("login-popup").style.display = "none";
             document.getElementById("login-overlay").style.display = "none";
         }
-
-       function login() {
+function register() {
     const username = document.getElementById("usernameInput").value.trim();
-    if (!username) {
-        alert("אנא הזן שם משתמש!");
+    const password = document.getElementById("passwordInput").value.trim();
+    if (!username || !password) {
+        alert("אנא הזן שם משתמש וסיסמה!");
         return;
     }
-    localStorage.setItem("username", username);
-    closeLoginPopup();
-    ultimateMode = true; // הפעלת מצב Ultimate עם התחברות
+    let users = getUsers();
+    if (users[username]) {
+        alert("שם המשתמש הזה כבר קיים! בחר שם אחר או התחבר.");
+        return;
+    }
+    users[username] = { password, registered: true };
+    saveUsers(users);
+    localStorage.setItem("currentUser", username);
+    ultimateMode = true;
     localStorage.setItem("ultimateMode", "true");
     document.getElementById("dramaticModeBtn").classList.add("active");
-    alert(`ברוך הבא, ${username}! אתה במצב Ultimate.`);
-    openUltimateMenu(); // פתיחת התפריט לאחר התחברות
+    closeLoginPopup();
+    alert(`נרשמת בהצלחה, ${username}! אתה במצב Ultimate.`);
+    openUltimateMenu();
+}
+       function login() {
+    const username = document.getElementById("usernameInput").value.trim();
+    const password = document.getElementById("passwordInput").value.trim();
+    if (!username || !password) {
+        alert("אנא הזן שם משתמש וסיסמה!");
+        return;
+    }
+    let users = getUsers();
+    if (!users[username] || users[username].password !== password) {
+        alert("שם משתמש או סיסמה שגויים!");
+        return;
+    }
+    localStorage.setItem("currentUser", username);
+    ultimateMode = true;
+    localStorage.setItem("ultimateMode", "true");
+    document.getElementById("dramaticModeBtn").classList.add("active");
+    closeLoginPopup();
+    alert(`ברוך הבא בחזרה, ${username}! אתה במצב Ultimate.`);
+    openUltimateMenu();
 }
 
-        function initTeamData() {
-            const username = localStorage.getItem("username");
-            if (!username) return null;
-            let teamData = JSON.parse(localStorage.getItem(`team_${username}`)) || {
-                teamName: "",
-                cards: [],
-                searchesLeft: 5,
-                savesLeft: 2,
-                lastReset: null
-            };
-            const today = new Date().toDateString();
-            if (teamData.lastReset !== today) {
-                teamData.searchesLeft = 5;
-                teamData.savesLeft = 2;
-                teamData.lastReset = today;
-            }
-            localStorage.setItem(`team_${username}`, JSON.stringify(teamData));
-            return teamData;
-        }
-
+       function initTeamData() {
+    const username = localStorage.getItem("currentUser");
+    if (!username) return null;
+    let teamData = JSON.parse(localStorage.getItem(`team_${username}`)) || {
+        teamName: "",
+        cards: [],
+        searchesLeft: 5,
+        savesLeft: 2,
+        lastReset: null
+    };
+    const today = new Date().toDateString();
+    if (teamData.lastReset !== today) {
+        teamData.searchesLeft = 5;
+        teamData.savesLeft = 2;
+        teamData.lastReset = today;
+    }
+    localStorage.setItem(`team_${username}`, JSON.stringify(teamData));
+    return teamData;
+}
         function showTeamOptions() {
-            const username = localStorage.getItem("username");
+            const username = localStorage.getItem("currentUser");
             if (!username) {
                 openLoginPopup();
             } else {
@@ -1368,7 +1419,7 @@ document.addEventListener("DOMContentLoaded", () => {
         }
 
         function saveTeamName() {
-            const username = localStorage.getItem("username");
+            const username = localStorage.getItem("currentUser");
             const teamName = document.getElementById("teamNameInput").value.trim();
             if (!teamName) {
                 alert("אנא הזן שם לקבוצה!");
@@ -1383,7 +1434,7 @@ document.addEventListener("DOMContentLoaded", () => {
         }
 
         function removeCard(index) {
-            const username = localStorage.getItem("username");
+            const username = localStorage.getItem("currentUser");
             let teamData = initTeamData();
             if (!teamData) return;
             teamData.cards.splice(index, 1);
@@ -1392,7 +1443,7 @@ document.addEventListener("DOMContentLoaded", () => {
         }
 
         function saveCard(model, role, rating) {
-            const username = localStorage.getItem("username");
+            const username = localStorage.getItem("currentUser");
             let teamData = initTeamData();
             if (!teamData) return;
             if (teamData.savesLeft <= 0) {
@@ -1488,16 +1539,13 @@ function showLeague() {
     const leagueTableDiv = document.getElementById("leagueTable");
     leagueTableDiv.innerHTML = "";
 
-    // דימוי נתוני ליגה
     const allTeams = [];
-    for (let i = 0; i < localStorage.length; i++) {
-        const key = localStorage.key(i);
-        if (key.startsWith("team_")) {
-            const teamData = JSON.parse(localStorage.getItem(key));
-            if (teamData.cards.length > 0) {
-                const avgRating = teamData.cards.reduce((sum, card) => sum + card.rating, 0) / teamData.cards.length;
-                allTeams.push({ name: teamData.teamName || key.replace("team_", ""), avgRating, players: teamData.cards.length });
-            }
+    const users = getUsers();
+    for (let username in users) {
+        const teamData = JSON.parse(localStorage.getItem(`team_${username}`));
+        if (teamData && teamData.cards.length > 0) {
+            const avgRating = teamData.cards.reduce((sum, card) => sum + card.rating, 0) / teamData.cards.length;
+            allTeams.push({ name: teamData.teamName || username, avgRating, players: teamData.cards.length });
         }
     }
 
@@ -1517,7 +1565,6 @@ function showLeague() {
     document.getElementById("league-popup").style.display = "block";
     document.getElementById("league-overlay").style.display = "block";
 }
-
 // סגירת חלון הליגה
 function closeLeaguePopup() {
     document.getElementById("league-popup").style.display = "none";
